--- a/assets/css/visual.css
+++ b/assets/css/visual.css
@@ -10,24 +10,6 @@ body {
     font-family: 'Open Sans', serif !important;
     font-size: 13px !important;
 }
-[id^="tabone"] {
-    background-color: #7f7fbf;
-}
-[id^="tabone"]:hover {
-    background-color: white;
-}
-[id^="tabtwo"] {
-    background-color: #9999cc;
-}
-[id^="tabone"]:hover {
-    background-color: white;
-}
-[id^="tabthree"] {
-    background-color: #b2b2d8;
-}
-[id^="tabone"]:hover {
-    background-color: white;
-}
 a {
     color: black;
 }
@@ -40,9 +22,17 @@ hr {
     margin: 0px;
     padding: 1%;
 }
+#searchbar {
+    text-align: right;
+    padding-right: 9%;
+    float: right;
+}
+#random {
+    padding-right:18%
+}
 #currentTask {
     padding-left: 18%;
-    padding-right: 18%;
+    float: left;
 }
 #instructions {
     padding-bottom: 50px;
